# sample-module

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
sample_module/: __init__.py  __main__.py  _version.py
