[metadata]
# Project Name
name = sample-module
version = attr: sample_module.__version__
author = Firstname Lastname
description = Sample Project Description
author_email = email@example.com
keywords = sample, keywords, for, project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >3.8, <4
include_package_data = True
packages = find:
# List requirements.txt here
install_requires =
#    other_packate == 0.0.1
#    PyYAML>=6.0
zip_safe = True

[options.packages.find]
include = sample_module*

[options.package_data]
* = *.txt, *.md, *.rst

# Enter entry point if a cli script reference is required
#[options.entry_points]
#console_scripts =
#    sample-cli=sample_module.__main__:cli